cmake_minimum_required(VERSION 3.20)
project(spacecraftcc)
set(CMAKE_CXX_STANDARD 17)

#include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
#conan_basic_setup()
#FATAL_ERROR：cmake出错，停止编译和生成(信息红色)
#SEND_ERROR：cmake出错，继续编译，但是停止生成(信息红色)
#WARNING：cmake警告，继续编译(信息红色)
#AUTHOR_WARNING：开发者警告，继续编译(信息红色)
#DEPRECATION：如果使用set方法设置CMAKE_ERROR_DEPRECATED为true(不区分大小写)，编译出错，否则继续编译
#(none) or NOTICE：不设置mode，默认是NOTICE模式，不影响编译和生成，用于打印消息(信息白色)
#STATUS：编译时状态信息，左边以--开头(信息白色)
#DEBUG：针对开发人员的调试信息(信息白色)
#TRACE：日志级别的临时信息(信息白色)
#message(DEBUG "${CMAKE_BINARY_DIR}")

if (CMAKE_BUILD_TYPE MATCHES Debug)
    message(" ")
    message("CMAKE IN DEBUG MODE")
    message(" ")
elseif (CMAKE_BUILD_TYPE MATCHES Release)
    message(" ")
    message("CMAKE IN RELEASE MODE")
    message(" ")
endif ()
message("system: ${CMAKE_SYSTEM_PREFIX_PATH}")
find_package(glog CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(folly CONFIG REQUIRED)
#find_package(sdl2 CONFIG REQUIRED)
#find_library(FOLLY_LIBRARY folly)
#message("folly: ${FOLLY_LIBRARY}")
file(GLOB_RECURSE source_files "src/*.cpp")
add_executable(spacecraftcc ${source_files})
target_link_libraries(spacecraftcc glog::glog fmt::fmt ${FOLLY_LIBRARY})


